fix(css): nav menu too big

--- a/src/css/alt-menu.css
+++ b/src/css/alt-menu.css
@@ -56,7 +56,7 @@
 /* mode paysage et écrans larges */
 @media (min-width: 615px), screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
   #altMenuContainer {
-    width: calc(100vw - 75px - var(--safe-area-inset-left));
-    left: calc(75px + var(--safe-area-inset-left))
+    width: calc(100vw - var(--safe-area-inset-left) - var(--safe-area-inset-right));
+    left: calc(var(--safe-area-inset-left))
   }
 }
