--- a/src/css/map-buttons.css
+++ b/src/css/map-buttons.css
@@ -297,7 +297,7 @@
   background-position: center;
   position: fixed;
   left: calc(50vw - 25px);
-  top: calc((100vh - 78px - var(--safe-area-inset-bottom))/2 - 25px);
+  top: calc((100vh - 68px - var(--safe-area-inset-bottom))/2 - 25px);
   pointer-events: none;
 }
 
@@ -306,9 +306,9 @@
   display: flex;
   position: absolute;
   box-sizing: border-box;
-  top: calc(100% - 78px - var(--safe-area-inset-bottom));
+  top: calc(100% - 68px - var(--safe-area-inset-bottom));
   width: 100%;
-  height: calc(78px + var(--safe-area-inset-bottom));
+  height: calc(68px + var(--safe-area-inset-bottom));
   font-size: 12px;
   background-color: white;
   padding: 10px 30px 8px 15px;
