--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,7 +1,7 @@
 #navContainer {
     display: flex;
     position: absolute;
-    top: calc(100% - 78px - var(--safe-area-inset-bottom));
+    top: calc(100% - 68px - var(--safe-area-inset-bottom));
     width: 100%;
     height: 60px ;
     font-size: 12px;
